--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.5.0",
   "description": "simple js animation timeline library",
   "main": "timeliner.js",
+  "type": "module",
   "scripts": {
     "build": "rollup src/timeliner.js > build/timeliner.js",
     "mini": "rollup -c rollup.config.js",
-    "watch": "watchify src/timeliner.js --full-paths=false -t package-json-versionify --debug -o timeliner.js -v",
+    "watch": "watchify src/timeliner.js --full-paths=false -t babelify -t package-json-versionify --debug -o timeliner.js -v",
     "start": "npm run watch",
     "lint": "eslint src/",
     "fix": "eslint --fix src/",
@@ -32,9 +33,14 @@
   },
   "homepage": "https://github.com/zz85/timeliner",
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "babelify": "^10.0.0",
     "do.js": "^1.0.0",
+    "package-json-versionify": "^1.0.4",
     "rollup": "^2.10.2",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-terser": "^5.3.0",
+    "watchify": "^4.0.0"
   },
   "dependencies": {
     "eslint": "^7.0.0"
